# ximea_test

./: CMakeLists.txt  main.cpp  stdafx.h
include/: Blobber.h  DebugRenderer.h  Gui.h  ImageProcessor.h  Maths.h  SoccerBot.h  VisionManager.h  XimeaCamera.h
kernels/: debayer.cl
src/: Blobber.cpp  DebugRenderer.cpp  DisplayWindow.cpp  Gui.cpp  ImageProcessor.cpp  SoccerBot.cpp  Util.cpp  VisionManager.cpp
